--- a/index.html
+++ b/index.html
@@ -6,165 +6,6 @@
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
-<style>
-  /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
-
-.wrap {
-  position: relative;
-  top: 150px;
-  width: 150px;
-  margin: 0 auto;
-}
-
-.loader {
-  position: absolute;
-  top: 0;
-  z-index: 10;
-  width: 50px;
-  height: 50px;
-  border: 15px solid transparent;
-  border-radius: 50%;
-
-  /*
-  border-left-color: #212121;
-  */
-  border-left-color: #2c2c2c;
-  opacity: 0;
-  /*
-  animation: loadEr 3s infinite;
-  */
-}
-
-/*
-@keyframes loadEr {
-  0% {
-    border-top-color: rgba(44,44,44,0);
-    border-right-color: rgba(55,55,55,0);
-    border-bottom-color: rgba(66,66,66,0);
-    border-left-color: rgba(33,33,33,0);
-    
-  }
-  10.4% {
-    border-top-color: rgba(44,44,44,0.5);
-    border-right-color: rgba(55,55,55,0);
-    border-bottom-color: rgba(66,66,66,0);
-    border-left-color: rgba(33,33,33,0);
-  }
-  20.8% {
-    border-top-color: rgba(44,44,44,0);
-    border-right-color: rgba(55,55,55,0);
-    border-bottom-color: rgba(66,66,66,0);
-    border-left-color: rgba(33,33,33,0);
-  }
-31.2% {
-  border-top-color: rgba(44,44,44,0);
-    border-right-color: rgba(55,55,55,0.5);
-    border-bottom-color: rgba(66,66,66,0);
-    border-left-color: rgba(33,33,33,0);
-}
-41.6% {
-  border-top-color: rgba(44,44,44,0);
-    border-right-color: rgba(55,55,55,0);
-    border-bottom-color: rgba(66,66,66,0);
-    border-left-color: rgba(33,33,33,0);
-  transform: rotate(40deg);
-}
-52% {
-  border-top-color: rgba(44,44,44,0);
-    border-right-color: rgba(55,55,55,0);
-    border-bottom-color: rgba(66,66,66,0.5);
-    border-left-color: rgba(33,33,33,0);
-}
-62.4% {
-  border-top-color: rgba(44,44,44,0);
-    border-right-color: rgba(55,55,55,0);
-    border-bottom-color: rgba(66,66,66,0);
-    border-left-color: rgba(33,33,33,0);
-}
-72.8% {
-  border-top-color: rgba(44,44,44,0);
-    border-right-color: rgba(55,55,55,0);
-    border-bottom-color: rgba(66,66,66,0);
-    border-left-color: rgba(33,33,33,0.5);
-}
-}
-*/
-
-.loaderbefore {
-  width: 50px;
-  height:50px;
-  border: 15px solid #ddd;
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  z-index: 9;
-}
-
-.circular {
-  position: absolute;
-  top: -15px;
-  left: -15px;
-  width: 70px;
-  height: 70px;
-  border: 20px solid;
-  border-radius: 50%;
-  border-top-color: #333;
-  border-left-color: #fff;
-  border-bottom-color: #333;
-  border-right-color: #fff;
-
-  opacity: 0;
-  transform: scale(4, 4) rotate(0);
-
-  /*
-  opacity: 0.2;
-  animation: poof 5s infinite;
-  */
-}
-
-.another {
-  opacity: 0;
-  transform: rotate(90deg) scale(4);
-  /*
-  animation: poofity 5s infinite;
-  animation-delay: 1s;
-  */
-}
-/*
-@keyframes poof {
-  0% {transform: scale(1,1) rotate(0deg); opacity: 0.2;}
-  50% {transform: scale(4,4) rotate(360deg); opacity: 0;}
-}
-@keyframes poofity {
-  0% {transform: scale(1,1) rotate(90deg); opacity: 0.1;}
-  50% {transform: scale(4,4) rotate(-360deg); opacity: 0;}
-}
-*/
-
-.text {
-  position: absolute;
-  top: 95px;
-  left: 8px;
-  font-family: Arial;
-  text-transform: uppercase;
-  color: #888;
-  /*
-  animation: opaa 10s infinite;
-  */
-}
-
-/*
-@keyframes opaa {
-  0% {opacity: 1;}
-10% {opacity: 0.5}
-15% {opacity: 1;}
-30% {opacity: 1;}
-65% {opacity: 0.3;}
-90% {opacity: 0.8;}
-}
-*/
-
-</style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
@@ -172,143 +13,18 @@
 
 <body>
 
-  <div class="wrap">
-      <div class="loader"></div>
-      <div class="loaderbefore"></div>
-      <div class="circular"></div>
-      <div class="circular another"></div>
-      <div class="text">Loading</div>
+  <div class="rotate-loading-wrap">
+      <div class="layer-blur"></div>
+      <div class="inner"></div>
+      <div class="static"></div>
+
+      <div class="outer"></div>
+      <div class="outer another"></div>
+      <div class="text"></div>
   </div>
 
-  <!--script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script-->
   <script src='./jquery.js'></script>
   <script src='./velocity.min.js'></script>
-
-    <script type="text/javascript">
-        // TODO add -webkit-transform;
-
-        $(function () {
-
-            var circular = $('.circular').eq(0);
-            var circular2 = $('.circular.another');
-            var loader = $('.loader');
-
-            /*
-            circular.velocity({
-                opacity: 0,
-                scale: (4,4)
-                // rotateZ: -360
-            }, {
-                // easing: 'linear',
-                duration: 2500,
-                loop: true
-            });
-            */
-
-            var circularOneStart = 0;
-            var circularOneDest = -360;
-
-            var circularOneOpacStart = 0;
-            var circularOneOpacEnd = 0.2;
-
-            var circularOneScale = 4;
-            var circularOneScaleEnd = 1;
-
-            var rotateOne = function () {
-
-                circular.velocity({
-                    opacity: [circularOneOpacEnd, circularOneOpacStart],
-                    scale: [circularOneScaleEnd, circularOneScale],
-                    rotateZ: [circularOneDest, circularOneStart]
-                }, {
-                    duration: 2500,
-                    easing: 'ease',
-                    // delay: 100,
-                    complete: function (elements) {
-
-                        var tmp = circularOneDest;
-                        circularOneDest = circularOneStart;
-                        circularOneStart = tmp;
-
-                        tmp = circularOneScale;
-                        circularOneScale = circularOneScaleEnd;
-                        circularOneScaleEnd = tmp;
-
-                        tmp = circularOneOpacEnd;
-                        circularOneOpacEnd = circularOneOpacStart;
-                        circularOneOpacStart = tmp;
-
-                        rotateOne();
-                    }
-                });
-            };
-            rotateOne();
-
-
-            var c2Opac = 0, c2OpacEnd = 0.1;
-            var c2Scale = 4, c2ScaleEnd = 1;
-            // var c2Rotate = 0, c2RotateMid = 90, c2RotateEnd = -360;
-
-            var c2Rotate1 = [90, 0];
-            var c2Rotate2 = [-360, 90];
-            var c2Rotate = c2Rotate1;
-
-            var rotateAnother = function () {
-
-                circular2.velocity({
-                    opacity: [c2OpacEnd, c2Opac],
-                    scale: [c2ScaleEnd, c2Scale],
-                    // rotateZ: [c2RotateMid, c2Rotate]
-                    rotateZ: c2Rotate
-                }, {
-                    duration: 2500,
-                    easing: 'ease',
-                    // delay: 100,
-                    complete: function (elements) {
-                        var tmp = c2Opac;
-                        c2Opac = c2OpacEnd;
-                        c2OpacEnd = tmp;
-
-                        tmp = c2Scale;
-                        c2Scale = c2ScaleEnd;
-                        c2ScaleEnd = tmp;
-
-                        c2Rotate = c2Rotate[0] === 90 ? c2Rotate2 : c2Rotate1;
-
-                        rotateAnother();
-                    }
-                });
-            };
-
-
-
-            setTimeout(rotateAnother, 1000);
-
-
-            var innerOpac = 0, innerOpacEnd = 0.5;
-
-            var rotateInner = function () {
-
-                loader.velocity({
-                    opacity: [innerOpacEnd, innerOpac],
-                    rotateZ: "+=75" 
-                }, {
-                    duration: 300,
-                    delay: 200,
-                    easing: 'ease',
-                    complete: function (elements) {
-                        var tmp = innerOpac;
-                        innerOpac = innerOpacEnd;
-                        innerOpacEnd = tmp;
-
-                        rotateInner();
-                    }
-                });
-            };
-
-            rotateInner();
-        });
-  </script>
 
 </body>
 </html>
